[package]
name = "bevy-sequential-actions"
authors = ["hikikones"]
version = "0.14.0"
edition = "2024"
rust-version = "1.88.0"
description = "A Bevy library for executing various actions in a sequence."
readme = "README.md"
homepage = "https://github.com/hikikones/bevy-sequential-actions"
repository = "https://github.com/hikikones/bevy-sequential-actions"
license = "MIT OR Apache-2.0"
keywords = ["gamedev", "bevy", "action", "sequence", "command"]
categories = ["game-development"]

[dependencies]
bevy_ecs = { version = "0.17", default-features = false }
bevy_app = { version = "0.17", default-features = false }
bevy_log = { version = "0.17", default-features = false }
bevy_derive = { version = "0.17", default-features = false }
variadics_please = { version = "1.1", default-features = false }
downcast-rs = { version = "2.0", default-features = false }
