[package]
name = "bevy-sequential-actions"
version = "0.16.0"
edition = "2024"
rust-version = "1.95.0"
description = "A Bevy library for executing various actions in a sequence."
readme = "README.md"
homepage = "https://github.com/hikikones/bevy-sequential-actions"
repository = "https://github.com/hikikones/bevy-sequential-actions"
license = "MIT OR Apache-2.0"
keywords = ["action", "bevy", "command", "gamedev", "sequence"]
categories = ["game-development"]

[dependencies]
bevy_app = { version = "0.19", default-features = false }
bevy_derive = { version = "0.19", default-features = false }
bevy_ecs = { version = "0.19", default-features = false }
bevy_log = { version = "0.19", default-features = false }
downcast-rs = { version = "2.0", default-features = false }
variadics_please = { version = "2.0", default-features = false }

[dev-dependencies]
bevy = { version = "0.19", default-features = false, features = ["debug"] }
shared = { path = "examples/shared" }
